# sk_msd_trajectoryFM

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
notebooks/: test_baseline.ipynb  test_data.ipynb  test_ode.ipynb  train_ode.ipynb
src/: main.py  model.py  train_ode.py  train_ode_ctx.py  train_ode_random_idx.py
src/conf/: clearml.yaml  config.yaml  trainer.yaml
src/conf/clearml/: default.yaml  tfm_mlp.yaml
src/conf/data_module/: eth.yaml
src/conf/model/: tfm_mlp.yaml
src/conf/trainer/: 50ep-5stop.yaml  default.yaml
src/data/: batch_proccessing.py  datamodule.py
src/models/: mlp.py  ode_baseline.py  ode_ctx.py  tfm_mlp.py
src/models/components/: mlp.py  plotter.py
