[project]
name = "trajectoryfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "alembic==1.13.1",
    "anndata==0.10.7",
    "antlr4-python3-runtime==4.9.3",
    "array-api-compat==1.7.1",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "autopage==0.5.2",
    "black==24.4.2",
    "certifi==2024.6.2",
    "cfgv==3.4.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cliff==4.7.0",
    "cloudpickle==3.0.0",
    "cmaes==0.10.0",
    "cmd2==2.4.3",
    "colorlog==6.8.2",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "distlib==0.3.8",
    "docker-pycreds==0.4.0",
    "exceptiongroup==1.2.1",
    "filelock==3.15.1",
    "fire==0.6.0",
    "flake8==7.0.0",
    "flake8-pyproject==1.2.3",
    "fonttools==4.53.0",
    "frozenlist==1.4.1",
    "fsspec==2024.6.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "greenlet==3.0.3",
    "h5py==3.11.0",
    "huggingface-hub==0.23.4",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
    "hydra-submitit-launcher==1.2.0",
    "identify==2.5.36",
    "idna==3.7",
    "iniconfig==2.0.0",
    "ipywidgets==8.1.3",
    "isort==5.13.2",
    "joblib==1.4.2",
    "jupyterlab-widgets==3.0.11",
    "kiwisolver==1.4.5",
    "lanelet2>=1.2.2",
    "legacy-api-wrap==1.4",
    "lightning-bolts==0.6.0.post1",
    "lightning-utilities==0.3.0",
    "llvmlite==0.43.0",
    "mako==1.3.5",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.0",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "mypy-extensions==1.0.0",
    "natsort==8.4.0",
    "networkx==3.3",
    "nodeenv==1.9.1",
    "numba==0.60.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "opencv-python>=4.11.0.86",
    "optuna==2.10.1",
    "pandas==2.0.3",
    "pastel==0.2.1",
    "pathspec==0.12.1",
    "patsy==0.5.6",
    "pbr==6.0.0",
    "pillow==10.3.0",
    "pluggy==1.5.0",
    "poethepoet==0.10.0",
    "pot==0.9.3",
    "pre-commit==3.7.1",
    "prettytable==3.10.0",
    "protobuf==5.27.1",
    "psutil==5.9.8",
    "pycodestyle==2.11.1",
    "pyflakes==3.2.0",
    "pynndescent==0.5.12",
    "pyparsing==3.1.2",
    "pyperclip==1.8.2",
    "pyrootutils==1.0.4",
    "pytest==8.2.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytorch-lightning==1.8.3",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "requests==2.32.3",
    "rich==13.7.1",
    "safetensors==0.4.3",
    "scanpy==1.10.1",
    "scikit-learn==1.5.0",
    "scipy==1.13.1",
    "scprep==1.2.3",
    "seaborn==0.13.2",
    "sentry-sdk==2.5.1",
    "session-info==1.0.0",
    "setproctitle==1.3.3",
    "smmap==5.0.1",
    "sqlalchemy==2.0.30",
    "statsmodels==0.14.2",
    "stdlib-list==0.10.0",
    "stevedore==5.2.0",
    "submitit==1.5.1",
    "tensorboardx==2.6.2.2",
    "termcolor==2.4.0",
    "threadpoolctl==3.5.0",
    "timm==1.0.3",
    "tomli==2.0.1",
    "tomlkit==0.12.5",
    "torch==1.12.1+cu113",
    "torchaudio==0.12.1",
    "torchcde==0.2.5",
    "torchdiffeq==0.2.4",
    "torchdyn==1.0.6",
    "torchmetrics==0.11.0",
    "torchsde==0.2.6",
    "torchvision==0.13.1+cu113",
    "torchviz==0.0.2",
    "tqdm==4.66.4",
    "trajdata>=1.3.2",
    "trampoline==0.1.2",
    "tzdata==2024.1",
    "umap-learn==0.5.6",
    "urllib3==2.2.1",
    "virtualenv==20.26.2",
    "wandb==0.17.1",
    "widgetsnbextension==4.0.11",
    "yarl==1.9.4",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"
explicit = true   # <-- ВАЖНО

[tool.uv.sources]
torch = { index = "pytorch-cu113" }
torchvision = { index = "pytorch-cu113" }
torchaudio = { index = "pytorch-cu113" }
